[package]
name = "pinetime-rtic"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbrgn/pinetime-rtic/"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = { version = "1.0.0", default-features = false }
nrf52832-hal = { version = "0.12", features = ["rt","xxAA-package"], default-features = false }
rtic-monotonic = "1.0.0"
embedded-hal = "0.2"
fugit = "0.3.0"
debouncr = "0.1.2"
numtoa = "0.2"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.1", features = ["cortex-m"] }
rubble = "0.0.4"
rubble-nrf5x = { version = "0.0.4", features = ["52832"], default-features = false }
# we need to bump this to 0.7
st7789 = { version = "0.2", features = ["graphics","batch","buffer"], default-features = false }
# embedded graphics upgrade needed
embedded-graphics = "0.6"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1
