[package]
name = "pinetime-rtic"
version = "0.2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>, Greg Green <gpgreen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gpgreen/pinetime-rtic/"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = { version = "1.0.0", default-features = false }
rtic-monotonic = "1.0.0"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
nrf52832-hal = { version = "0.12", features = ["rt","xxAA-package"], default-features = false }
fugit = "0.3.0"
debouncr = "0.1.2"
numtoa = "0.2"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.1", features = ["cortex-m"] }
rubble = "0.0.4"
rubble-nrf5x = { version = "0.0.4", features = ["52832"], default-features = false }
mipidsi = "0.7.0"
display-interface-spi = "0.4"
embedded-graphics = "0.8"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1
